added refresh function

--- a/client/src/app/oiseau/oiseau.component.html
+++ b/client/src/app/oiseau/oiseau.component.html
@@ -31,9 +31,9 @@
         <td class="contentCell">
           <select #newStatutSpeces>
             <option value="">Select status</option>
-            <option value="Vulnerable">Non menacée</option>
-            <option value="Endangered">Préoccupation mineure</option>
-            <option value="Critically Endangered">Vulnérable</option>
+            <option value="Non menacée">Non menacée</option>
+            <option value="réoccupation mineure">Préoccupation mineure</option>
+            <option value="Vulnérable">Vulnérable</option>
           </select>
         </td>
         <td class="contentCell" contenteditable="true" placeholder="" #newNomScientifiqueComsommer></td>
