centered button on modal and fixed edit cells for birds

--- a/client/src/app/information-modal/information-modal.component.html
+++ b/client/src/app/information-modal/information-modal.component.html
@@ -6,7 +6,7 @@
             </p>
         </div>
     </mat-dialog-content>
-    <mat-dialog-actions>
+    <mat-dialog-actions class="confirm-button">
         <button mat-stroked-button color="primary" (click)="closeModal()">Compris</button>
     </mat-dialog-actions>
 </div>
