--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -13,28 +13,12 @@
 
 .home {
     width: 100%;
-    background-color: var(--theme-background);
     font-family: 'Roboto', sans-serif;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     font-size: 60px;
     text-align: center;
-}
-
-.hotel1 {
-    color: var(--theme-purple);
-    font-family: 'Varela Round', sans-serif;
-}
-
-.hotel2 {
-    color: var(--theme-blue);
-    font-family: 'Varela Round', sans-serif;
-}
-
-.hotel3 {
-    color: var(--theme-lightblue);
-    font-family: 'Varela Round', sans-serif;
 }
 
 .btn {
@@ -46,5 +30,5 @@
     padding: 10px;
     padding-right: 20px;
     padding-left: 20px;
-
+    margin-top: 20px;
 }
