--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,17 +2,14 @@
   <a class="navbar-brand title" href="/">INF3710 - TP5</a>
   <div class="navbar-expand mr-auto">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" routerLink="/hotels">Hotels</a>
-      <a class="nav-item nav-link active" routerLink="/rooms">Rooms</a>
-      <a class="nav-item nav-link active" routerLink="/guests">Guests</a>
+      <a class="nav-item nav-link active" routerLink="/birds">Oiseaux</a>
     </div>
   </div>
 </nav>
 
 <div class="home" *ngIf="route == ''">
   <p>
-    Welcome<br />to<br /><span class="hotel1">hotels</span
-    ><span class="hotel2">hotels</span><span class="hotel3">hotels</span>
+    Bienvenue
   </p>
   <button type="button" class="btn" routerLink="/birds">VOIR LES OISEAUX &#10140;</button>
 </div>
